--- a/Telecom Customer Churn/Telecom-Churn-Final.ipynb
+++ b/Telecom Customer Churn/Telecom-Churn-Final.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d4afddce-a159-4a64-8bce-9c26c8d3c43b",
+   "metadata": {},
+   "source": [
+    "# Telecom Customer Churn"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "fe234a68-e5b3-450e-a369-179c901c4b7c",
