--- a/Ice Video Game Sales/video_game_sales.ipynb
+++ b/Ice Video Game Sales/video_game_sales.ipynb
@@ -5524,7 +5524,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.18"
   },
-  "toc-autonumbering": true,
+  "toc-autonumbering": false,
   "toc-showcode": false,
   "toc-showmarkdowntxt": false,
   "toc-showtags": false
