--- a/Telecom Customer Churn/Telecom-Churn-Final.ipynb
+++ b/Telecom Customer Churn/Telecom-Churn-Final.ipynb
@@ -2,10 +2,93 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d4afddce-a159-4a64-8bce-9c26c8d3c43b",
+   "id": "eb17f484-4884-442b-9cf0-8773d21792dd",
+   "metadata": {
+    "tags": [],
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "# Telecom Churn Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3064d183-0832-4498-bd4c-3cc4a16c797b",
    "metadata": {},
    "source": [
-    "# Telecom Customer Churn"
+    "## Table of Contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d14bd53a-75be-4480-beb2-3fe95a244d2f",
+   "metadata": {},
+   "source": [
+    "### [Intro and First Look](#Introduction)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65adf38e-7fbf-4c8a-a497-7a5760920634",
+   "metadata": {},
+   "source": [
+    "### [Clarifying Questions and Rough Plan](#Clarifying-questions) (interesting)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ed5b4b0-6451-4bef-9a1c-a20d22b9e1bd",
+   "metadata": {},
+   "source": [
+    "### [Preprocessing](#Loading-and-preprocessing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a7d669a-6621-4bf4-b641-280e8399849d",
+   "metadata": {},
+   "source": [
+    "### [Feature Engineering](#Feature-engineering)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c76586d-e48c-4b9f-b870-2511a0afec69",
+   "metadata": {},
+   "source": [
+    "### [Exploratory Data Analysis](#Exploratory-data-analysis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "005a5efe-9b77-476c-934f-913eccae5edb",
+   "metadata": {},
+   "source": [
+    "### [Try Machine Learning Models](#Try-machine-learning-models) (interesting)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddbab20a-b55c-4ee0-bbec-3a62f705c89d",
+   "metadata": {},
+   "source": [
+    "### [Test Final Model](#Test-final-model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c99e610-b6fb-4ac6-b46e-c27af0ed77ca",
+   "metadata": {},
+   "source": [
+    "### [Conclusion and Solution Report](#Conclusion)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "263b657c-c760-42a8-97a4-e87abb2863b9",
+   "metadata": {},
+   "source": [
+    "# Introduction"
    ]
   },
   {
@@ -1729,7 +1812,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "# 1. Loading and preprocessing"
+    "# Loading and preprocessing"
    ]
   },
   {
@@ -3469,7 +3552,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "# 2. Feature engineering"
+    "# Feature engineering"
    ]
   },
   {
@@ -3569,7 +3652,7 @@
    "id": "cadc1352-9576-42cc-8e2c-9247920b894e",
    "metadata": {},
    "source": [
-    "# 3. Exploratory data analysis"
+    "# Exploratory data analysis"
    ]
   },
   {
@@ -3892,7 +3975,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "# 4. Try machine learning models"
+    "# Try machine learning models"
    ]
   },
   {
@@ -5395,9 +5478,11 @@
   {
    "cell_type": "markdown",
    "id": "6016955e-68c8-4511-940d-b81ac52cd9e6",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
-    "# 5. Test final model"
+    "# Test final model"
    ]
   },
   {
@@ -5827,7 +5912,9 @@
   {
    "cell_type": "markdown",
    "id": "a67fb3aa",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "# Solution Report"
    ]
